--- a/src/input.css
+++ b/src/input.css
@@ -7,8 +7,22 @@
         @apply [&>span]:bg-transparent [&>span::before]:translate-y-0 [&>span::before]:rotate-45 [&>span::after]:translate-y-0 [&>span::after]:-rotate-45 [&>span]:rotate-[720deg]
     }
 
+    .btn {
+        @apply text-white bg-slate-500 py-2 px-4 border border-transparent hover:bg-slate-600 active:bg-slate-700 inline-block
+    }
+
+    h2 {
+        @apply text-4xl 
+    }
+
 }
 
+.element-animation {
+    opacity: 0;
+    transform: translateY(-3rem);
+}
 
-
-
+.element-show {
+    opacity: 100;
+    transform: translateY(0);
+}
